@@ -1,1 +1,2 @@
 DIST schedule-1.1.tar.gz 24603 SHA256 5dfa3f873aa35b95bb5cfcd84a49c19c1890a6c502f1335341bf1d7145953fc6 SHA512 12accb7d63bfabc7621fe44c8776843194be4d33c263dc261777d65e777b170351b4e8c5c77b37a61a740bfff2b9681f47df6dd3695158329b7a7c23c537dc48 WHIRLPOOL 959b7393d7a4d3e47dc093f65291c9f5ce8688821ca6cb4fd023a7ed723bbf03b6a20b5cc76ee21c30ff10fc07f1ce43cb989524c730222db29c17103c6dd2b5
+DIST schedule-2.0.tar.gz 27165 SHA256 d1b9fdc76681cbde250756197e844baf7eec6bd195dc28d67f7c9a5812953ae5 SHA512 e238d6416deac0d0ad4c63148a6f2b69cb14c1bcda3b97391b3068f7808645d78c9ed0ae213323adf1ac6242041897d79943bc81c8162322e614c2a56c6f8e2d WHIRLPOOL bddf55ca24279aef47b660db10c06e8c2d169dda3fbdb4303f8f212e6b10213b1ca1c83358284d8e375250976f6a6433717b08afe19aae4499dbe3ffb83b41ce
