@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*starter-2.0 (11 Aug 2014)
+
+  10 Aug 2014; Martin Väth <martin@mvath.de>:
+  Version bump. Support static job numbers, race-free parallel
+
 *starter-1.1 (10 Aug 2014)
 
   10 Aug 2014; Martin Väth <martin@mvath.de>:
